feat: header e inicio de primeira tela

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import CommunitySection from "../components/CommunitySection.astro";
 ---
 
-<Layout />
+<Layout>
+  <main class="bg-primary-dark">
+    <CommunitySection />
+  </main>
+</Layout>
