feat: criação de sections

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,14 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import CommunitySection from "../components/CommunitySection.astro";
+import HowItWorksSection from "../components/HowItWorksSection.astro";
+import CallToActionSection from "../components/CallToActionSection.astro";
 ---
 
 <Layout>
   <main class="bg-primary-dark">
     <CommunitySection />
+    <HowItWorksSection />
+    <CallToActionSection />
   </main>
 </Layout>
