feat: ajuste responsividade

--- a/src/components/HowItWorksSection.astro
+++ b/src/components/HowItWorksSection.astro
@@ -3,9 +3,7 @@ import DesktopIllustration from "../assets/how-it-works-desktop.svg?raw";
 import MobileIllustration from "../assets/how-it-works-mobile.svg?raw";
 ---
 
-<section
-  class="bg-surface-light text-text-dark py-16 sm:py-20 lg:py-28 overflow-x-hidden"
->
+<section class="bg-surface-light text-text-dark py-16 sm:py-20 lg:py-28">
   <div class="container mx-auto px-6">
     <div class="space-y-12">
       <div
@@ -18,8 +16,7 @@ import MobileIllustration from "../assets/how-it-works-mobile.svg?raw";
             Como funciona?
           </h2>
           <p
-            class="font-montserrat text-text-dark
-            text-base lg:text-body-lg lg:leading-[27px]"
+            class="font-montserrat text-text-dark text-base lg:text-body-lg lg:leading-[27px]"
           >
             A comunidade se propõe conectar pessoas da área de tecnologia,
             oferecendo trilhas profissionais e roadmaps de carreira. O objetivo
