--- a/src/components/CallToActionSection.astro
+++ b/src/components/CallToActionSection.astro
@@ -4,7 +4,7 @@ import CtaDesktopIllustration from "../assets/cta-desktop-illustration.svg?raw";
 import CtaMobileIllustration from "../assets/cta-mobile-illustration.svg?raw";
 ---
 
-<section class="bg-surface-light text-text-dark py-16 sm:py-20 lg:py-28">
+<section class="bg-surface-light text-text-dark px-6 py-16 sm:py-20 lg:py-28">
   <div class="container mx-auto px-6">
     <div class="flex flex-col lg:flex-row items-center gap-12 lg:gap-8">
       <div class="lg:w-1/2 flex flex-col items-center lg:items-start">
