feat: ajuste responsividade

--- a/src/components/HowItWorksSection.astro
+++ b/src/components/HowItWorksSection.astro
@@ -7,16 +7,23 @@ import MobileIllustration from "../assets/how-it-works-mobile.svg?raw";
   <div class="container mx-auto px-6">
     <div class="space-y-12">
       <div
-        class="max-w-2xl mx-auto lg:max-w-3xl lg:mx-0 lg:-translate-x-24 transition-transform duration-300"
+        class="max-w-lg mx-auto md:max-w-xl lg:max-w-3xl lg:mx-0 lg:-translate-x-24 transition-transform duration-300"
       >
         <div class="text-center lg:text-left">
           <h2
-            class="font-display font-bold text-accent-pink text-4xl lg:text-heading-lg lg:leading-[81px] mb-6"
+            class="font-display font-bold text-accent-pink
+              mb-6 leading-tight
+              
+              /* Escada de Fontes de 3 Níveis */
+              text-4xl md:text-5xl lg:text-heading-lg lg:leading-[81px]"
           >
             Como funciona?
           </h2>
           <p
-            class="font-montserrat text-text-dark text-base lg:text-body-lg lg:leading-[27px]"
+            class="font-montserrat text-text-dark
+              
+              /* Escada de Fontes de 3 Níveis para o Parágrafo */
+              text-base md:text-lg lg:text-body-lg lg:leading-[27px]"
           >
             A comunidade se propõe conectar pessoas da área de tecnologia,
             oferecendo trilhas profissionais e roadmaps de carreira. O objetivo
@@ -25,11 +32,12 @@ import MobileIllustration from "../assets/how-it-works-mobile.svg?raw";
           </p>
         </div>
       </div>
+
       <div class="w-full flex justify-center">
-        <div class="hidden md:block max-w-4xl">
+        <div class="hidden lg:block max-w-4xl">
           <Fragment set:html={DesktopIllustration} />
         </div>
-        <div class="md:hidden max-w-sm">
+        <div class="lg:hidden max-w-sm md:max-w-md">
           <Fragment set:html={MobileIllustration} />
         </div>
       </div>
