--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import "../styles/global.css";
 ---
@@ -13,8 +14,11 @@ import "../styles/global.css";
     <title>Astro Basics</title>
   </head>
   <body>
-    <Header />
-    <slot />
+    <main>
+      <Header />
+      <slot />
+    </main>
+    <Footer />
   </body>
 </html>
 
