feat: ajuste responsividade

--- a/src/components/CallToActionSection.astro
+++ b/src/components/CallToActionSection.astro
@@ -29,7 +29,8 @@ import CtaMobileIllustration from "../assets/cta-mobile-illustration.svg?raw";
           <p>Clique no botão abaixo.</p>
         </div>
         <a
-          href="#"
+          target="_blank"
+          href="https://forms.gle/3Bi1DPwRsVLT4mUD9"
           class="inline-block mt-8 px-10 py-3
             bg-button-primary text-main-text
             font-montserrat font-bold text-lg
