feat: ajuste links

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,9 +5,21 @@ import IconLinkedIn from "../assets/icons/icon-linkedin.svg?raw";
 import IconGithub from "../assets/icons/icon-github.svg?raw";
 
 const socialLinks = [
-  { href: "#", icon: IconInstagram, label: "Instagram" },
-  { href: "#", icon: IconLinkedIn, label: "LinkedIn" },
-  { href: "#", icon: IconGithub, label: "GitHub" },
+  {
+    href: "https://www.instagram.com/hiveconnect.tech/",
+    icon: IconInstagram,
+    label: "Instagram",
+  },
+  {
+    href: "https://www.linkedin.com/company/hive-connect-tech",
+    icon: IconLinkedIn,
+    label: "LinkedIn",
+  },
+  {
+    href: "https://github.com/socialhiveconnect",
+    icon: IconGithub,
+    label: "GitHub",
+  },
 ];
 ---
 
