--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ const actionButtons = [
 <header class="bg-primary-dark font-montserrat sticky top-0 z-30">
   <div class="container mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex items-center justify-between min-h-[104px]">
-      <div class="flex-shrink-0">
+      <div class="flex-shrink-0" style=margin-bottom: 10px;margin-top: 10px;>
         <Logo />
       </div>
 
