--- a/src/components/HowItWorksSection.astro
+++ b/src/components/HowItWorksSection.astro
@@ -7,7 +7,7 @@ import MobileIllustration from "../assets/how-it-works-mobile.svg?raw";
   <div class="container mx-auto px-6">
     <div class="space-y-12">
       <div
-        class="max-w-lg mx-auto md:max-w-xl lg:max-w-3xl transition-transform duration-300"
+        class="max-w-lg mx-auto md:max-w-xl lg:max-w-3xl lg:mx-0 transition-transform duration-300"
       >
         <div class="text-center">
           <h2
