isolado imagem da trilha com comentário

--- a/src/components/HowItWorksSection.astro
+++ b/src/components/HowItWorksSection.astro
@@ -1,6 +1,6 @@
 ---
-import DesktopIllustration from "../assets/how-it-works-desktop.svg?raw";
-import MobileIllustration from "../assets/how-it-works-mobile.svg?raw";
+{/* import DesktopIllustration from "../assets/how-it-works-desktop.svg?raw";
+import MobileIllustration from "../assets/how-it-works-mobile.svg?raw"; */}
 ---
 
 <section class="bg-surface-light text-text-dark py-16 sm:py-20 lg:py-28">
