isoado imagem da trilha com comentário

--- a/src/components/HowItWorksSection.astro
+++ b/src/components/HowItWorksSection.astro
@@ -33,14 +33,14 @@ import MobileIllustration from "../assets/how-it-works-mobile.svg?raw"; */}
         </div>
       </div>
 
-      <div class="w-full flex justify-center">
+      {/*<div class="w-full flex justify-center">
         <div class="hidden lg:block max-w-4xl">
           <Fragment set:html={DesktopIllustration} />
         </div>
         <div class="lg:hidden max-w-sm md:max-w-md">
           <Fragment set:html={MobileIllustration} />
         </div>
-      </div>
+      </div>*/}
     </div>
   </div>
 </section>
